--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -24,7 +24,7 @@ However, this will cause an opposite torque on the magnetization of the domain, 
 If enough such spin-polarized current flows through the domain, its magnetization will eventually be reoriented along the spins of the incident carriers. This method circumvents the need for electromagnets to create a magnetic field by using circular currents, greatly increasing the efficiency and allowing for greater domain density.
 
 It is clear that the longevity associated with magnetic order, combined with the ease and efficiency of manipulation through electrical means is highly desirable.
-This brings us to the topic of this chapter, namely the magnetoelectric effect in multiferroic insulators.
+This brings us to the topic of this Chapter, namely the magnetoelectric effect in multiferroic insulators.
 As the name implies, the magnetoelectric effect allows for the electric control of magnetic order or the magnetic control of ferroelectric polarization~\cite{Spaldin2019,Khomskii2009,Fiebig2005,Fiebig2016,Cheong2007}, the former being the most attractive from a technological point of view.
 In practice, however, the effectiveness of this cross-order control is often limited, and multiferroic materials are rare, to begin with.
 The reasons why are summarized briefly below, following the discussion of Khomskii in Ref.~\cite{Khomskii2009}.
@@ -37,7 +37,7 @@ In this case, the two orders are coupled strongly, but the size of the ferroelec
 We use the ABO$_3$ perovskites with a magnetic transition metal B ion as an example in order to understand why multiferroics are so rare.
 Magnetic order is almost exclusively caused by partially filled valence shells, partially-filled $d$ shells in this case.
 Ferroelectricity, on the other hand, can find its origin in various microscopic effects.
-In many of them, the ferroelectricity is caused by an off-center shift of the B ion in the surrounding oxygen octahedron (see chapter~\ref{ch:Softening} for a detailed discussion on ferroelectricity in BaTiO$_3$).
+In many of them, the ferroelectricity is caused by an off-center shift of the B ion in the surrounding oxygen octahedron (see Chapter~\ref{ch:Softening} for a detailed discussion on ferroelectricity in BaTiO$_3$).
 This is due to the formation of strong covalent bonds between one (or three) oxygens and the B ion, using the latter's empty $d$ states. 
 While it is not fully understood why, the presence of any electrons in the $d$ shell of the B ion severely hampers this process which is one of the root causes for the rarity of multiferroicity in these materials, since magnetism requires at least some filling.
 A more detailed study on the rarity of multiferroics was performed in Ref.~\cite{Hill2000}.
@@ -76,7 +76,7 @@ This leads to reduced effectiveness of external electric fields as a method of e
 Here, we focus specifically on GdMn$_2$O$_5$ (see Fig.~\ref{fig:GdMn2O5_unit_cell}(a)) that demonstrates an exceptional tunability of the ferroelectric polarization through an applied magnetic field~\cite{Khomskii2009,Lee13}.
 The orthorhombic $R$Mn$_2$O$_5$ manganites have a very complex crystalline structure, which leads to a wealth of different phases depending on the temperature, rare-earth ion $R$, external magnetic field, and even electric-field poling history~\cite{Chapon04, Chapon06, Blake05, Radaelli09,Radaelli08, Zheng2019}.
 
-In the next section, we first give a summary of the transitions and phases that are important for this chapter, followed by a discussion on the experiments that were performed by our collaborators in Sec.~\ref{sec:GdMn2O5_experiment}.
+In the next Section, we first give a summary of the transitions and phases that are important for this Chapter, followed by a discussion on the experiments that were performed by our collaborators in Sec.~\ref{sec:GdMn2O5_experiment}.
 Afterward, we continue in Sec.~\ref{sec:GdMn2O5_Theory} with a description of the system in terms of an effective spin Hamiltonian involving the Gd spins, and the AFM order parameters $\bm L$ describing the two Mn chains.
 We demonstrate that our model reproduces the overall behavior observed by the experiments remarkably well, and discuss its energetic properties, in Sec.~\ref{sec:GdMn2O5_energetics}.
 After uncovering the source of the peculiar magnetoelectric switching, we shift our focus in Sec.~\ref{sec:GdMn2O5_magnetic_configuration} to the magnetic configuration, and how it changes because of the applied magnetic fields.
@@ -123,10 +123,10 @@ There is a second source of polarization in GdMn$_2$O$_5$, also due to the symme
 All the exchanges between Gd and the surrounding Mn ions are again AFM.
 A similar train of thought can then be followed as before, causing the bonds with parallel spins to extend and those with antiparallel spins to contract (see Fig.~\ref{fig:GdMn2O5_unit_cell}(c)).
 
-Gd$^{3+}$ is special compared with the other magnetic rare-earth ions in the $R$Mn$_2$O$_5$ family because it has a very isotropic electronic configuration (4$f^7$), i.e. there is no unquenched orbital angular momentum and associated anisotropic charge distribution (as discussed profusely in the Rashba chapter~\ref{ch:Rashba}). This means that the large spin (nominally $S=7/2$) can orient itself freely to optimize the magnetic interactions with its neighboring Mn atoms, without incurring any penalties through the atomic SOC combined with nonzero OAM.
+Gd$^{3+}$ is special compared with the other magnetic rare-earth ions in the $R$Mn$_2$O$_5$ family because it has a very isotropic electronic configuration (4$f^7$), i.e. there is no unquenched orbital angular momentum and associated anisotropic charge distribution (as discussed profusely in the Rashba Chapter~\ref{ch:Rashba}). This means that the large spin (nominally $S=7/2$) can orient itself freely to optimize the magnetic interactions with its neighboring Mn atoms, without incurring any penalties through the atomic SOC combined with nonzero OAM.
 This leads to a high magnetic susceptibility and associated magnetoelectric effect, surpassing the other $R$Mn$_2$O$_5$ compounds both in size and tunability of $P_b$, with a measured variation of up to 5000\,$\mu$ C/m$^2$ when a magnetic field is applied~\cite{Lee13}. 
 
-Now that the stage is set, we continue with a description of the puzzling experimental observations that motivated the study in this chapter.
+Now that the stage is set, we continue with a description of the puzzling experimental observations that motivated the study in this Chapter.
 
 \section{Experimental methods and results \label{sec:GdMn2O5_experiment}}
 \begin{figure}
@@ -141,10 +141,10 @@ In these plots, we have denoted the four discussed states by the labels 1-4. The
 \caption{ \label{fig:GdMn2O5_experiment2} {\bf Angle and temperature dependence of the four-state switching.} By comparing panels (a) and (b) we can see that changing the sign of the field angle $\phi_H$ does not influence the four-state switching. c) Temperature dependence of the hysteresis loop at the magic angle. Above 4 K (upper panel) the more usual two-state hysteresis loop is observed, whereas below 4 K (lower panel) the four-state behavior starts to arise. The states, colors, and arrows are indicated in the same way as in Fig.~\ref{fig:GdMn2O5_experiment1}.}
 \end{figure}
 
-The measurements we present in this section were performed in the group of A. Pimenov, on single crystal GdMn$_2$O$_5$ samples grown by S.-W. Cheong's group.
+The measurements we present in this Section were performed in the group of A. Pimenov, on single crystal GdMn$_2$O$_5$ samples grown by S.-W. Cheong's group.
 Magnetic fields were applied under varying angles $\phi_H$ to the crystalline $a$-axis, and swept up and down while tracking the evolution of $P_b$.
 The results for such measurements at 2 K are displayed in Fig.~\ref{fig:GdMn2O5_experiment1}.
-Only positive fields were applied, but the behavior is identical for fields with opposite signs, as we will show later in section~\ref{sec:GdMn2O5_magnetic_configuration}. 
+Only positive fields were applied, but the behavior is identical for fields with opposite signs, as we will show later in Section~\ref{sec:GdMn2O5_magnetic_configuration}. 
 In previous experimental measurements, the magnetic field was only applied along the crystalline $a$-axis, i.e. $\phi_H = 0$~\cite{Lee13}.
 
 In the following we will refer to three distinct switching regimes: the low angle, ``magic'' angle, and high angle regime.
@@ -174,7 +174,7 @@ Turning now to the measurements displayed in Fig.~\ref{fig:GdMn2O5_experiment2},
 From the two panels in (c), displaying measurements at 15 K and 4 K with $\phi_H$ along the magic angle, we can observe that the four-state hysteresis loop only appears at low temperatures.
 For higher temperatures, a more usual two-state loop is found, similar to the high angle loop in panel (c) of Fig.~\ref{fig:GdMn2O5_experiment1}.
 
-To conclude this section, we would like to point out that we focus on the overall switching behavior, i.e. we ignore the details that can be found by careful study of the $P_b$ graphs.
+To conclude this Section, we would like to point out that we focus on the overall switching behavior, i.e. we ignore the details that can be found by careful study of the $P_b$ graphs.
 For example, in Fig.~\ref{fig:GdMn2O5_experiment1}(b) one can observe three distinct steps that appear around 5 T during the 1$\rightarrow$2 and 3$\rightarrow$4 switching.
 These steps are, however, absent at the same field magnitude, when the system is on the 2$\rightarrow$3 and 4$\rightarrow$1 branch.
 Their origin might be related to the spins in the Mn chains rotating individually, rather than in unison as we will assume in our model.
@@ -324,7 +324,7 @@ The term with $K_S$ denotes the easy-axis anisotropy for the Gd ions, this time 
 $K_S$ is significantly smaller than $K_L$ due to the isotropic environment and valence configuration of the Gd ions.
 The final term denotes the Zeeman energy of the Gd ions in the external magnetic field $\bm{H}$.
 
-To conclude this section, we gather all the terms in our effective Hamiltonian:
+To conclude this Section, we gather all the terms in our effective Hamiltonian:
 \begin{multline}
     \label{eq:GdMn2O5_model}
     H=\gamma(\bm{L}_1\cdot \bm{L}_2)^2 +\sum_{\alpha}\chi((\bm{H}\cdot \bm{L}_\alpha)^2-H^2)\\
@@ -338,7 +338,7 @@ To conclude this section, we gather all the terms in our effective Hamiltonian:
 \end{multline}
 
 \section{Methods \label{sec:GdMn2O5_methods}}
-Before continuing with the results and a discussion of the physics, we comment briefly on the numerical aspects of our simulations used throughout the rest of this chapter.
+Before continuing with the results and a discussion of the physics, we comment briefly on the numerical aspects of our simulations used throughout the rest of this Chapter.
 The first question to address is what model parameters to use in conjunction with the Hamiltonian in Eq.~\eqref{eq:GdMn2O5_model}.
 This is not particularly straightforward, since our model is phenomenological, and the order parameters and interactions arise from a combination of the microscopic ones.
 One could, instead, formulate a model in terms of all the microscopic degrees of freedom, i.e. all the spins of both Gd and Mn ions, which would not only lead to a more computationally demanding model, the increased complexity also makes developing an intuitive understanding much harder.
@@ -355,7 +355,7 @@ $v_1 = 7.9$~meV, $v_2 = 0.15$~meV, $K_L = 1.1$~meV, $K_S = 0.09$~meV, $\gamma = 
 The parameters for the exchange striction were then also chosen to fit the experimental hysteresis loop as well as possible:
 ${\beta_1 = 0.06\,\mu}$C/cm$^2$, $\beta_2 = 0.06\:\mu$C/cm$^2$, $\beta_3 = 0.04\:\mu$C/cm$^2$.
 
-However, these parameters are by no means a requirement for the overarching behavior to appear in our model. As we will show in greater detail in the section discussing the topological nature of the switching behavior~\ref{sec:GdMn2O5_topology}, a great deal of freedom exists in choosing these parameters, if the only requirement is to reproduce the three switching regimes.
+However, these parameters are by no means a requirement for the overarching behavior to appear in our model. As we will show in greater detail in the Section discussing the topological nature of the switching behavior~\ref{sec:GdMn2O5_topology}, a great deal of freedom exists in choosing these parameters, if the only requirement is to reproduce the three switching regimes.
 This lies at the heart of our claim that this effect might exist in other materials since neither the model itself nor its parameters depend greatly on the microscopic details of GdMn$_2$O$_5$. 
 
 The next question is how to simulate the experimental set-up, which is, in contrast to the question about the model parameters, much easier to answer.
@@ -374,7 +374,7 @@ We now turn to a discussion of the results obtained from these simulations of th
     \caption{\label{fig:GdMn2O5_theory}{\bf Simulation of the angle dependent magnetoelectric switching.}
     The evolution of ferroelectric polarization $P_b$ during the magnetic field sweep cycle is depicted for the low (a), magic (b), and high (c) angle regimes. 
    In each panel, the four-states and field cycle progression are marked in the same way as in Fig~\ref{fig:GdMn2O5_experiment1}. The four-states hysteresis loop is observed for the field at the magic orientation in panel (b). 
-    The insets indicate the sequence of states visited during the cycle for each regime and winding numbers (see section~\ref{sec:GdMn2O5_topology} for further details on the latter).
+    The insets indicate the sequence of states visited during the cycle for each regime and winding numbers (see Section~\ref{sec:GdMn2O5_topology} for further details on the latter).
 }
 \end{figure}
 The magnetoelectric switching regimes of $P_b$ obtained from the simulations, are showcased in Fig.~\ref{fig:GdMn2O5_theory}, displaying the same three regimes as the experimental results in Figure~\ref{fig:GdMn2O5_experiment1}.
@@ -501,7 +501,7 @@ Indeed, focusing on the highlighted spins in Fig.~\ref{fig:GdMn2O5_4configs}, we
 	\IncludeGraphics{spin_configs}
 	\caption{{\bf Magnetic switching behavior for different magnetic field angles.} a) The time evolution of the magnetic field strength, where the color gradient encodes the time, corresponding to the color gradients found in the other panels. Two graphs are shown to indicate that the behaviors displayed in panels (b-f) does not depend on which of the branches is followed. The grey dotted line denotes the switching field. (b-f) The switching behavior of $\bm L_1$ and $\bm L_2$ for various angles of the applied magnetic field, ranging between +20$^\circ$ in (b) and -20$^\circ$ in (f). The green arrows denote the AFM order parameter orientations during the field sweep in (a), where the color gradients (red to blue) corresponds to the same timing as shown in panel (a). The microscopic spin configuration of the magic angle regime in panel (c) is detailed in the right panel surrounded by the red square. Spin configurations (1, 2, 3, 4) are labeled as in Fig.~\ref{fig:GdMn2O5_theory}(b). The full rotation is performed by the chain that is most parallel to the direction of the applied field. \label{fig:GdMn2O5_regimes}}  
 \end{figure}
-This peculiar ``crankshaft''-like behavior is a direct result of the evolution of the energy minima and barriers as discussed in the previous section.
+This peculiar ``crankshaft''-like behavior is a direct result of the evolution of the energy minima and barriers as discussed in the previous Section.
 We use this crankshaft analogy because the material seemingly converts the linear up--down motion of the magnetic field (the ``piston'') into the circular motion performed by the spins (the ``driveshaft'').
 
 This brings us to the final remark we wish to make on the motion of the spins.
@@ -522,10 +522,10 @@ On the boundary between the two extremes one of the $\bm L_\alpha$ toggles while
 \subsection{Topology \label{sec:GdMn2O5_topology}}
 \begin{figure}
 	\IncludeGraphics[width=0.9\textwidth]{winding_modelparam.png}
-	\caption{\label{fig:GdMn2O5_windingvsparam} {\bf Magic Angle region.} The panels demonstrate the influence of selected model parameters on the magic angle region. In each panel, only the parameter labeled on the vertical axis is varied, whereas the others are kept at the values reported in the Methods section \ref{sec:GdMn2O5_methods}. All parameters are reported in units of meV. The blue and red regions denote the angles $\phi_H$ for which the low angle and high angle two-state switching regimes appear, respectively. The grey boundary region is where the magic angle four-state switching occurs, characterized by a winding number of 1, and is topologically protected by the neighboring regimes.}
+	\caption{\label{fig:GdMn2O5_windingvsparam} {\bf Magic Angle region.} The panels demonstrate the influence of selected model parameters on the magic angle region. In each panel, only the parameter labeled on the vertical axis is varied, whereas the others are kept at the values reported in the methods Section \ref{sec:GdMn2O5_methods}. All parameters are reported in units of meV. The blue and red regions denote the angles $\phi_H$ for which the low angle and high angle two-state switching regimes appear, respectively. The grey boundary region is where the magic angle four-state switching occurs, characterized by a winding number of 1, and is topologically protected by the neighboring regimes.}
 \end{figure}
-We have hinted multiple times throughout the previous chapters at the topological nature of the switching behavior.
-We will sharpen our previous statements in this section and comment on the generality and robustness of the observed behavior.
+We have hinted multiple times throughout the previous Chapters at the topological nature of the switching behavior.
+We will sharpen our previous statements in this Section and comment on the generality and robustness of the observed behavior.
 
 Comparing the trajectories (white lines in Fig.~\ref{fig:GdMn2O5_trajectories} and Fig.~\ref{fig:GdMn2O5_heatmap}) that describe the field evolution of the state of the system, we see that it is confined to one of the vertical valleys, as discussed previously.
 This is the case for all possible switching regimes. When $\phi_H = +10^\circ$, $\phi_{L_1}$ varies strongest, whereas for $\phi_H = -10^\circ$, $\phi_{L_2}$ varies the most, while in both cases the system as a whole remains inside the valley that hosts the original state.
@@ -540,7 +540,7 @@ where the integral is taken over the time interval, $t_0$, during which the magn
 In the two-state switching regimes, $Q  = 0$, whereas for the four-state switching we find $Q = 1$.
 This means that as long as the low and high angle regimes are present in a material (Fig~\ref{fig:GdMn2O5_trajectories} (a,c)), there will always exist a boundary region near the magic angle that interpolates between the two (Fig~\ref{fig:GdMn2O5_trajectories}(b)), leading to the circular four-state magnetoelectric switching loop.
 
-We finish this section by demonstrating the generality of this behavior that results from its topological nature.
+We finish this Section by demonstrating the generality of this behavior that results from its topological nature.
 
 The size and position of the $\phi_H$ interval for which the four-state regime appears depend on the details of the model parameters, but similarly to other topological boundaries (e.g. magnetic domain walls, topologically protected edge states in topological insulators), it can not be destroyed when the neighboring ``domains'' are present (high and low angle switching regimes in this case).
 The influence of varying a single model parameter is demonstrated in Fig.~\ref{fig:GdMn2O5_windingvsparam}, where the blue and red regions correspond to the angles $\phi_H$ where the low and high angle regimes appear, respectively.
@@ -548,11 +548,11 @@ Indeed, we see that for many parameters the four-state region (displayed in grey
 One can also observe that the influence of some parameters is greater than others. For instance, taking $v_1=0.7$ meV dramatically increases the width of the four-state switching region to the interval [5.2$^\circ$, 17.6$^\circ$] for $\phi_H$.
 However, even for very high values of $v_1$ does the four-state switching appear.
 A small variation to $K_L$, the strength of the Mn single-ion anisotropy, on the other hand, leads to a significant change to the characteristics of the topologically protected region.
-This is not surprising, since the behavior of the Mn chains is very similar to that of the usual spin-flop transition, which crucially depends on the easy-axis anisotropy. This latter point will be expanded upon in the next section.
+This is not surprising, since the behavior of the Mn chains is very similar to that of the usual spin-flop transition, which crucially depends on the easy-axis anisotropy. This latter point will be expanded upon in the next Section.
 
 We have so far given a detailed description of the observed behavior, experimentally and from the simulations of our effective model.
 While the model reproduces the experiments remarkably well, and we have found that a combination of symmetries and energetics lies at the core of the peculiar switching behavior, one may wonder if this can be rationalized further.
-In an attempt to do just this, we proceed in the following section with some intuitive considerations.
+In an attempt to do just this, we proceed in the following Section with some intuitive considerations.
 
 \subsection{Intuition \label{sec:GdMn2O5_intuitive}}
 First of all, we would like to point out the similarity of the behavior of $\bm L_1$ and $\bm L_2$ with the well-known spin-flop transition in antiferromagnets.
@@ -573,7 +573,7 @@ When the chain then eventually flops with a 90$^\circ$ increment, the Gd spin re
 This leads to an alignment of the Gd spin that was originally at a positive relative angle w.r.t. the field ($\phi_{Gd}>10^\circ$), to now be at a negative relative angle ($\phi_{Gd}<10^\circ$).
 When the field subsequently decreases, the Gd rotates further in the same direction, towards negative angles, thus pulling the Mn chains towards one of the flop directions, leading to another 90$^\circ$ rotation (this time the flop happens to align again with the easy axis anisotropy due to a diminished Zeeman energy gain through canting).
 
-We hope that this intuitive picture shines some light on what might be happening microscopically to cause the behavior, although we concede the claim that this is a complete microscopic explanation. We will give an additional demonstration of this intuitive argument in the context of a simplified model, derived in the next section.
+We hope that this intuitive picture shines some light on what might be happening microscopically to cause the behavior, although we concede the claim that this is a complete microscopic explanation. We will give an additional demonstration of this intuitive argument in the context of a simplified model, derived in the next Section.
 
 \section{Simplified model \label{sec:GdMn2O5_simple_model}}
 Having modeled the topologically protected switching in  GdMn$_2$O$_5$ with all its complexity, one may wonder what the minimal requirements are to have similar behavior where the spins rotate 360$^\circ$ while the applied field only oscillates along a single axis.
@@ -605,7 +605,7 @@ This leads us to the equations:
 \end{align}
 as a minimal model that still demonstrates the crankshaft-like behavior.
 
-This minimal model embodies the intuitive explanation that we laid out in the previous section, relying on the interaction between the two Gd spins and the magnetic field to push the AFM order into the positive direction at the switching field.
+This minimal model embodies the intuitive explanation that we laid out in the previous Section, relying on the interaction between the two Gd spins and the magnetic field to push the AFM order into the positive direction at the switching field.
 When the chain flips, the exchange field from the Mn ions then pushes the Gd spins further in the same positive direction, thus completing the first part of the cycle.
 During the second cycle, the same considerations lead to the continued positive rotation of the spins.
 
