--- a/papers/Softening/Softening.tex
+++ b/papers/Softening/Softening.tex
@@ -9,10 +9,10 @@ Each of these minima are associated with a different direction of the OP which c
 During a phase transition in a large system, regions that are separated in space will each individually acquire one of these equivalent values of the OP.
 Such regions are referred to as domains, with the narrow boundaries between them called domain walls (DWs) inside of which the OP is interpolated.
 
-We already encountered examples of such OPs: in GeTe the ferroelectric polarization describes the order of the electric dipoles inside the crystal; in GdMn$_2$O$_5$ we found two primary OPs, $\bm{L}_1$ and $\bm{L}_2$, describing the antiferromagnetic order inside each Mn chain, and one slave order parameter $P_b$ that denotes the resulting polarization; in Chromium we discussed a similar antiferromagnetic OP with, in that case, an associated periodic lattice displacement.
+We already encountered examples of such OPs: in GeTe the ferroelectric polarization describes the order of the electric dipoles inside the crystal; in GdMn$_2$O$_5$ we found two primary OPs, $\bm{L}_1$ and $\bm{L}_2$, describing the antiferromagnetic order inside each Mn chain, and one slave order parameter $P_b$ that denotes the resulting polarization; in chromium we discussed a similar antiferromagnetic OP with, in that case, an associated periodic lattice displacement.
 
 In the case of GdMn$_2$O$_5$ we have shown that there are four combinations of the primary OPs that have the same energy, and how they can be transformed into each other by the time-reversal and inversion symmetry operators (see Fig.~\ref{fig:GdMn2O5_heatmap}). 
-In Chromium the antiferromagnetic OP has two energy equivalent values, again related by time-reversal symmetry and visualized in Fig.~\ref{fig:Cr_energy_surfaces}(a).
+In chromium the antiferromagnetic OP has two energy equivalent values, again related by time-reversal symmetry and visualized in Fig.~\ref{fig:Cr_energy_surfaces}(a).
 
 Turning back, now, to the discussion on inhomogeneity, domains, and DWs.
 There are, actually, some ways to achieve a completely homogeneous situation, even in relatively large systems.
@@ -37,7 +37,7 @@ Indeed, most of the research into DWs was originally focused on their dynamics, 
 This can be understood from the following energetic argument.
 When an external electric field is applied to the sample, it is more favorable for the DWs to move in order to grow the favored domains\footnote{Domains with the polarization along the electric field.}, rather than uniformly rotating the polarization in the domain as a whole.
 The latter requires overcoming the prohibitively large energy barrier that separates different orientations of the polarization \cite{Tagantsev2010}.
-This relatively low energy cost associated with the DW movement will also turn out to be one of the main contributors to the main subject of this chapter: the mechanical softening at purely ferroelectric DWs.
+This relatively low energy cost associated with the DW movement will also turn out to be one of the main contributors to the main subject of this Chapter: the mechanical softening at purely ferroelectric DWs.
 
 Because of the scaling down of technological devices into the nanoscale realm, the focus has more and more shifted towards the DWs themselves as the subject of study, rather than just as being the boundaries between domains.
 The physics that govern the region of the DW is usually richer than that of the domains. One of the reasons is that, as we mentioned before, the OP is locally forced away from the energetic minimum.
@@ -90,22 +90,22 @@ An applied strain gradient $\partial_j\varepsilon_{kl}$ will thus appear as an e
 While this effect is generally small (i.e. the $\Gamma_{ijkl}$ are small), the size of strain gradients scales inversely with the size of the sample, meaning that it becomes increasingly more important at the nanoscale of current state-of-the-art electronic devices.
 Thus, using a tip in contact with the material to apply such a strain gradient allows one to mechanically write domain patterns and DWs at will \cite{Lu2012,Abdollahi2015, Cordero-Edwards2017,Cordero-Edwards2019}.
 
-In this chapter we discuss the mechanical softening of 180$^\circ$, purely ferroelectric DWs. They are non ferroelastic in the sense that they separate domains that have identical strain textures.
+In this Chapter we discuss the mechanical softening of 180$^\circ$, purely ferroelectric DWs. They are non ferroelastic in the sense that they separate domains that have identical strain textures.
 A similar softening has been previously observed and studied for ferroelastic DWs \cite{Lee2003,Scott2012}, but purely ferroelectric DWs have largely flown under the radar of such mechanical studies.
 One reason is that the width of 180$^\circ$ DWs is on the order of a couple of unit cells (5 - 20 \AA \cite{Zhirnov1959}), and since they do not separate domains with different strains, they were perceived too small to be detected by mechanical means.
 This is because these studies usually involve the application of a tip to the surface of the sample, and the contact radius of such a tip is at least 100 unit cells.
 As mentioned before, however, even 180$^\circ$ DWs have a distinct strain texture associated with them, which extends much further than the narrow region in which the polarization reverses.
-This texture can be picked up mechanically by the applied tip and ultimately allows one to make the experimental observations that will be discussed in the next section, which were the impetus of the research presented in this chapter.
+This texture can be picked up mechanically by the applied tip and ultimately allows one to make the experimental observations that will be discussed in the next Section, which were the impetus of the research presented in this Chapter.
 
 From the practical point of view, this mechanical detection of ferroelectric DWs means that they can be probed without applying a bias voltage, which may prove useful for conducting ferroelectrics. Moreover, since phonon spectra are determined by the stiffness of the material, the softer DWs will harbor phonon modes with lower speeds. In turn, this may result in effects such as phonon refraction or even total internal reflection inside the walls, turning the DWs into ``phonon waveguides''. Because heat is transported by phonons, this would allow for heat propagation through the DWs with little dissipation. From the ability to create and destroy 180$^\circ$ DWs by voltage, regular patterns with internal elastic contrast could be created, effectively leading to a phononic crystal.
 This is interesting, since periodically poled ferroelectric crystals are already used in photonic applications \cite{Ferraro2014}.
 
-We start in Sec.~\ref{sec:BTO_exp} by introducing the experimental techniques and observations that lie at the base of this chapter. Afterwards, we continue with a short overview of the crystalline properties of BaTiO$_3$ in Sec.~\ref{sec:BTO_crystal}, an archetypal example of a ferroelectric perovskite.
+We start in Sec.~\ref{sec:BTO_exp} by introducing the experimental techniques and observations that lie at the base of this Chapter. Afterwards, we continue with a short overview of the crystalline properties of BaTiO$_3$ in Sec.~\ref{sec:BTO_crystal}, an archetypal example of a ferroelectric perovskite.
 This is followed by a detailed theoretical study in Sec.~\ref{sec:BTO_theory}, a description of our numerical simulations in Sec.~\ref{sec:BTO_methods}, and a discussion of the obtained results in Sec.~\ref{sec:BTO_results}.
 Finally, we conclude by summarizing the results in Sec.~\ref{sec:BTO_conclusion}.
 
 \section{Experimental methods and results \label{sec:BTO_exp}}
-In this section, we summarize the experiments performed by the group of Prof. Catalan that were the impetus of this research \cite{Stefani2020}.
+In this Section, we summarize the experiments performed by the group of Prof. Catalan that were the impetus of this research \cite{Stefani2020}.
 In order to determine the generality of the DW softening, three single crystal samples were studied: LiNbO$_3$, BaTiO$_3$, and PbTiO$_3$. It was found that all three show the same behavior, allowing us to focus on BaTiO$_3$ (BTO).
 The results of the experimental measurements are shown in Fig.~\ref{fig:BTO_experiment}.
 
@@ -149,7 +149,7 @@ In order to verify that the application of the tip to the surface does not chang
 As mentioned in the introduction, it is possible to switch the polarization mechanically through the flexoelectric effect (see Eq.\ref{eq:BTO_flexoelectricity}), but the tip needs to be applied with much greater force than in these experiments.
 Finally, the CRFM tip is conductive and grounded in a short-circuit configuration during the measurements, allowing for polarization charge screening.
 
-This concludes the overview of the experimental measurements performed by C. Stefani et al. in Ref.~\cite{Stefani2020} that lie at the base of this chapter.
+This concludes the overview of the experimental measurements performed by C. Stefani et al. in Ref.~\cite{Stefani2020} that lie at the base of this Chapter.
 We now turn to a short summary of BTO.
 
 \section{Barium titanate \label{sec:BTO_crystal}}
@@ -192,7 +192,7 @@ One could argue that this simplification is detrimental to the description of th
 %, sporting a width on the order of a couple of unit cells (5 - 20 \AA) \cite{Zhirnov1959}.
 Especially to describe the movement of the DW, it is necessary to take the Peierls-Nabarro barriers into account that exist due to the lattice structure.
 Naively, it seems that only atomistic first-principles based calculations manage to reproduce these accurately \cite{Meyer2002}, since in a perfect continuum picture no such barriers exist.
-However, as we will touch on in further detail when the simulation technique is discussed in section~\ref{sec:BTO_methods}, a numerical analog to these inter-cell barriers appears~\cite{Marton2018}.
+However, as we will touch on in further detail when the simulation technique is discussed in Section~\ref{sec:BTO_methods}, a numerical analog to these inter-cell barriers appears~\cite{Marton2018}.
 
 A fully microscopic ab-initio simulation\footnote{Using DFT calculations, for example.} of the strain mediated softening is infeasible from the computational point of view, requiring a dynamic calculation describing the movements of 10s of thousands of atoms during a period of many seconds.
 % Indeed, looking at the experimental measurements in Fig.~\ref{fig:BTO_experiment}(b), the region where the softening is observed is around 70 nm wide.
@@ -317,7 +317,7 @@ The resulting depolarizing field and associated energy contribution are large.
 If the tip is applied at the DW, however, positive bound charges appear on one side and negative on the other, because of the opposite signs of $e_{zzz}$ in the two domains.
 The depolarizing fields compensate in this case, and the resulting energy penalty is lower.
 This could lead to a softening at the DW since this lower energy penalty allows for a deeper indentation and thus results in a softer appearing material.
-However, as discussed in the experimental section, the tip is conductive and grounded at all times.
+However, as discussed in the experimental Section, the tip is conductive and grounded at all times.
 This causes short-circuit conditions which completely screen the bound charges created through longitudinal piezoelectricity.
 \begin{figure}[h]
 	\IncludeGraphics{depolarizing.png}
@@ -408,7 +408,7 @@ Finding the values of $P$ and $u$ that minimize the total free energy $F[P,u]=\i
 
 We perform this integration numerically, due to the complexity of Eq.~\eqref{eq:BTO_energy} and the highly heterogeneous situation that occurs when a tip is applied.
 The Finite Elements Method (FEM) provides a framework to do exactly that.
-Its ability to handle complex geometries and large length scales makes it one of the most well-established methods to numerically solve realistic mathematical and physical models (see Appendix ~\ref{ch:FEM} for further details).
+Its ability to handle complex geometries and large length scales makes it one of the most well-established methods to numerically solve realistic mathematical and physical models (see appendix ~\ref{ch:FEM} for further details).
 
 Using the parameters from previous ab-initio results \cite{Marton2010} and reported in Tab.~\ref{tab:BTO_param}, we first optimized the equilibrium situation for both a uniform domain and a single domain wall. The result of the latter is shown in Fig.~\ref{fig:BTO_wall}.
 A Gaussian force field, $\frac{a}{\sigma \sqrt{2\pi}}e^{-\frac{(x-x_{\rm tip})^2}{2\sigma^2}}$ with $\sigma = 1 \cdot 10^{-9}$ representing the contact radius and $a = 1 \cdot 10^{-18} \frac{eV}{nm^3}$, was then applied at various positions $x_{\rm tip}$ throughout both geometries.
@@ -418,7 +418,7 @@ If the tip is applied to the side of the geometry, in the case of a single domai
 We have tested the extent to which this contributes to our simulations, as demonstrated in Fig.~\ref{fig:BTO_numerical_effects}(a) for different lengths $L_x$ of the geometry. As one could expect, the effect is most influential in simulations with a small geometry.
 Since this is nonphysical, we use the domain simulation to calculate the amount of such spurious additional deformation and compensate for it in the DW simulation assuming that the finite-size effect is identical since the geometry is the same in both cases.
 
-To conclude this section, we would like to comment on the issue of the Peierls-Nabarro barriers \cite{Peierls1940,Nabarro1947}, since they influence the movement of the DW.
+To conclude this Section, we would like to comment on the issue of the Peierls-Nabarro barriers \cite{Peierls1940,Nabarro1947}, since they influence the movement of the DW.
 In essence, they are a result of the non-homogeneity of the crystalline lattice on the unit-cell length scale.
 This causes the DW to have a preferred center inside the unit cells, usually either on the edge or in the middle.
 A thorough study from first principles was performed by Meyer et al. \cite{Meyer2002}, where it was correctly stated that only by using this degree of granularity, one can achieve quantitative ab-initio results.
@@ -453,7 +453,7 @@ First, we demonstrate the influence of the breathing mode, shown in Fig.~\ref{fi
 The absolute value of the polarization is used as an indication of the DW width, and a tip was applied to the center of the wall with varying force.
 We can see that the wall indeed widens slightly when higher forces are applied, but that the effect is small, and the necessary force to achieve any widening is significantly larger than the experimental one.
 
-As discussed in the theory section~\ref{sec:BTO_theory}, the domain wall sliding mode is a more likely candidate to explain the long-range DW softening.
+As discussed in the theory Section~\ref{sec:BTO_theory}, the domain wall sliding mode is a more likely candidate to explain the long-range DW softening.
 To mimic the experimental conditions, we applied the tip force field at various distances away from the wall.
 In order to minimize the impact of the numerics, more specifically the sampling of the force field, we always centered the tip exactly at a mesh node.
 This means that the total force applied to the sample by the tip is identical for all simulations.
@@ -481,7 +481,7 @@ On the other hand, the wall is most likely pinned inside the material by some de
 We claim that these lead to the main source of the observed softening in purely ferroelectric DWs.
 \section{Conclusions \label{sec:BTO_conclusion}}
 
-In this chapter we have demonstrated how purely ferroelectric, i.e. non-ferroelastic, 180$^\circ$ DWs can appear mechanically softer than the domains they separate.
+In this Chapter we have demonstrated how purely ferroelectric, i.e. non-ferroelastic, 180$^\circ$ DWs can appear mechanically softer than the domains they separate.
 Using experimental observations as the starting point, we investigated many possible mechanisms and deduced which were most likely to contribute the most.
 The main observation was that the region of the softening is relatively wide, whereas the ferroelectric DWs are known to be very narrow.
 This pointed us towards the strain texture as the main property of the DWs that could lead to this softening behavior.
