--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -180,16 +180,17 @@ This brings me, finally, to my Mother and Father, whom I can not thank enough fo
 \setcounter{tocdepth}{1}
 \tableofcontents
 \mainmatter
-% \Include{Introduction}
-% \Include{Rashba}
-% \Include{GdMn2O5}
-% \Include{Cr}
+\raggedbottom
+\Include{Introduction}
+\Include{Rashba}
+\Include{GdMn2O5}
+\Include{Cr}
 \Include{Softening}
-% \appendix
-% \Include{DFT}
-% \Include{Wannier}
-% \Include{FEM}
-% \Include{codes}
+\appendix
+\Include{DFT}
+\Include{Wannier}
+\Include{FEM}
+\Include{codes}
 \backmatter
 \bibliography{references}
 \printindex
