--- a/papers/FEM/FEM.tex
+++ b/papers/FEM/FEM.tex
@@ -1,11 +1,11 @@
-\chapter{Phase-Field Modeling with the Finite Elements Method \label{ch:FEM}}
+\chapter{Phase-Field modeling with the Finite Elements Method \label{ch:FEM}}
 We give a short introduction to the methods we used in order to simulate phase-field models such as the one defined in Chapter~\ref{ch:Softening}, Eq.~\ref{eq:BTO_energy}.
-The Finite Element Method constitutes a big part of these simulations, thus, in light of making this Thesis relatively self-contained, we give a short summary of the topic, based on Ref.~\cite{Biner}.
+The Finite Element Method constitutes a big part of these simulations, thus, in light of making this Thesis relatively self contained, we give a short summary of the topic, based on Ref.~\cite{Biner}.
 \begin{figure}
 	\IncludeGraphics{fem}
 	\caption{\label{fig:BTO_fem}{\bf Finite Element Method.} a) Isoparametric local coordinate system for a triangular element. Image taken from Ref.~\cite{Biner}. b) 2D geometry spanned by triangular mesh demonstrating the flexibility of FEM meshes. Image taken from Ref.~\cite{2Dmesh}. c) Example of the geometry that is used in our simulations. d) Zoom in on the corner of the mesh shown in (c).}
 \end{figure}
-\\\\
+
 A fundamental building block is the isoparametric representation.
 In this representation, the geometry is divided into a set of elements that obey certain connectivity requirements, the main one being that each node must be connected to the same number of neighbor nodes.
 As an example, we describe the often used triangular elements for 2D geometries, shown in Fig.~\ref{fig:BTO_fem}(a,b).
@@ -50,7 +50,7 @@ It also allows for great flexibility through the density of the chosen grid, the
 We developed our own code in order to run the FEM simulations, based on the building blocks supplied by the \href{https://github.com/KristofferC/JuAFEM.jl}{JuAFEM.jl} package.
 We use a rectangular geometry uniformly spanned by tetrahedron elements, as shown in Fig.~\ref{fig:BTO_fem}(c,d).
 This choice is made since the uniform mesh mimics numerically the Peierls-Nabarro barriers that are present in any crystal due to the lattice.
-\\\\
+    
 The last ingredient of the simulation is a way to optimize the fields in order to reach the equilibrium condition at minimum energy.
 To achieve this we use the Conjugate Gradient Method \cite{Hestenes1952,Hager2005} as implemented in the package Optim.jl \cite{mogensen2018optim}.
 It is an iterative scheme that uses the gradient and previous step to choose the next step direction. 
